Add delete option for book reviews

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,6 +311,11 @@ padding-top: 25px;
   color: #FFC107;
 }
 
+/* Edit Review */
+
+.btn-large.cancel-btn {
+  background-color: #C74343;
+}
 
 /* Footer */
 
