--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="row center">
-  <a href="{{ url_for('reviews') }}" id="download-button"
+  <a href="{{ url_for('reviews') }}" 
     class="btn-large waves-effect waves-dark lighten-1 btn-styles">Get
     Started
   </a>
