--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -15,11 +15,11 @@
             <form method="POST" action="{{ url_for('add') }}">
                 <div class="row">
                     <div class="input-field col s6 l6">
-                        <input id="title" type="text" name="title" class="validate"  required>
+                        <input id="title" type="text" name="title" class="validate" required>
                         <label for="title">Title</label>
                     </div>
                     <div class="input-field col s6 l6">
-                        <input id="author" type="text" name="author" class="validate"  required>
+                        <input id="author" type="text" name="author" class="validate" required>
                         <label for="author">Author</label>
                     </div>
                 </div>
@@ -40,8 +40,9 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea" minlength="120"
-                            data-position="bottom" data-tooltip="Add a paragraph or two reviewing the book" required>
+                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
+                            minlength="120" data-position="bottom"
+                            data-tooltip="Add a paragraph or two reviewing the book" required>
                             </textarea>
                         <label for="review">Review</label>
                     </div>
@@ -49,44 +50,65 @@
 
                 <div class="row">
                     <div class="input-field col s5 l6">
+
                         <select name="category_name" multiple>
-                        {% for category in categories %}
+
+                            {% for category in categories %}
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endfor %}
+                            {% endfor %}
                         </select>
                         <label>Categories</label>
+
                     </div>
 
                     <div class="col s7 l6">
                         <br>
-                        <label>Rate (Optional)</label>
+                        <label>Rate</label>
                         <div class="star-input rate-padding">
-                            <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" />
+                            <input type="radio" name="rating" id="st5" title="5 stars" value="5" />
                             <label for="st5"></label>
-                            <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" />
+                            <input type="radio" name="rating" id="st4" title="4 stars" value="4" />
                             <label for="st4"></label>
-                            <input type="checkbox" name="rating" id="st3" title="3 stars"value="3" />
+                            <input type="radio" name="rating" id="st3" title="3 stars" value="3" />
                             <label for="st3"></label>
-                            <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" />
+                            <input type="radio" name="rating" title="2 stars" id="st2" value="2" />
                             <label for="st2"></label>
-                            <input type="checkbox" name="rating" title="1 star" id="st1" value="1" />
+                            <input type="radio" name="rating" title="1 star" id="st1" value="1" required />
                             <label for="st1"></label>
-                            
-                            
+
+
                         </div>
-                            
+
                     </div>
-                    
+
 
 
                 </div>
 
-                <div class="center">
-                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit">Create review
+                <div>
+                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn left"
+                        type="submit">
+                        Create review
                     </button>
                 </div>
 
             </form>
+
+            <a class="btn-large waves-effect waves-dark lighten-1 btn-styles cancel-btn right modal-trigger"
+                href="#cancel-modal1">Cancel
+            </a>
+            <div id="cancel-modal1" class="modal teal lighten-4">
+                <div class="modal-content">
+                    <h4 class="center">Cancel adding this review</h4>
+                </div>
+                <div class="modal-footer teal lighten-4">
+                    <a href="{{ url_for('reviews') }} " class="modal-close waves-effect waves-green btn-flat teal lighten-3">
+                        Agree</a>
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat red lighten-3">Disagree</a>
+                </div>
+            </div>
+
+
         </div>
 
 
