--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -12,45 +12,44 @@
     <div class="col s12 l12">
 
         <div class="overflow-form individual-review-background">
+
+
             <form method="POST" action="{{ url_for('edit', book_id=book._id) }}">
+                
                 <div class="row">
                     <div class="input-field col s6 l6">
                         <input id="title" type="text" value="{{ book.title }}" name="title" class="validate" required>
                         <label for="title">Title</label>
                     </div>
                     <div class="input-field col s6 l6">
-                        <input id="author" type="text" value="{{ book.author }}" name="author" class="validate"
-                            required>
+                        <input id="author" type="text" value="{{ book.author }}" name="author" class="validate" required>
                         <label for="author">Author</label>
                     </div>
                 </div>
-
+            
                 <div class="row">
                     <div class="input-field col s6 l6">
-                        <input id="affiliate" type="url" value="{{ book.affiliate}}" name="affiliate"
-                            class="validate tooltipped" data-position="bottom"
-                            data-tooltip="Please add an affiliate link from a bookseller" required>
+                        <input id="affiliate" type="url" value="{{ book.affiliate}}" name="affiliate" class="validate tooltipped"
+                            data-position="bottom" data-tooltip="Please add an affiliate link from a bookseller" required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
-
+            
                     <div class="input-field col s6 l6">
                         <input id="image" type="url" value="{{ book.image }}" name="image" class="validate tooltipped"
-                            data-position="bottom" data-tooltip="Add a .png or .jpg image sized at 500 pixels wide"
-                            required>
+                            data-position="bottom" data-tooltip="Add a .png or .jpg image sized at 500 pixels wide" required>
                         <label for="image">Add book image</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea"
-                            minlength="120" data-position="bottom"
-                            data-tooltip="Add a paragraph or two reviewing the book" required>
-                            {{- book.review -}}
-                            </textarea>
+                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea" minlength="120"
+                            data-position="bottom" data-tooltip="Add a paragraph or two reviewing the book" required>
+                                        {{- book.review -}}
+                                        </textarea>
                         <label for="review">Review</label>
                     </div>
                 </div>
-
+            
                 <div class="row">
                     <div class="input-field col s5 l6">
                         <select name="category_name" multiple>
@@ -65,7 +64,7 @@
                         </select>
                         <label>Categories</label>
                     </div>
-
+            
                     <div class="col s7 l6">
                         <br>
                         <!-- <label>Rate (Optional)</label> -->
@@ -80,41 +79,71 @@
                             <label for="st2"></label>
                             <input type="radio" name="rating" title="1 star" id="st1" value="1" required />
                             <label for="st1"></label>
-
-
+            
+            
                         </div>
-
+            
                     </div>
-
-
-
+            
+            
+            
                 </div>
 
-                <div>
-                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn left"
-                        type="submit">Update review
-                    </button>
+                <div class="row">
+                    <div class="col l4 center">
+                        <button class="btn-large waves-effect waves-dark lighten-1 btn-styles center"
+                            type="submit">Update
+                        </button>
+            
+                    </div>
+                
 
-                </div>
-
-            </form>
-
-            <a class="btn-large waves-effect waves-dark lighten-1 btn-styles cancel-btn right modal-trigger"
-                href="#cancel-modal1">Cancel
-            </a>
-            <div id="cancel-modal1" class="modal teal lighten-4">
-                <div class="modal-content">
-                    <h4 class="center">Cancel updating this review</h4>
-                </div>
-                <div class="modal-footer teal lighten-4">
-                    <a href="{{ url_for('profile', username=session['user']) }}"
-                        class="modal-close waves-effect waves-green btn-flat teal lighten-3">
-                        Agree</a>
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat red lighten-3">Disagree</a>
+                    <div class="col l4 center">
+                        <a class="btn-large waves-effect waves-dark lighten-1 btn-styles modal-trigger  center"
+                            href="#cancel-modal1">Cancel
+                        </a>
+                        <div id="cancel-modal1" class="modal teal lighten-4">
+                            <div class="modal-content">
+                                <h4 class="center">Cancel updating this review</h4>
+                            </div>
+                            <div class="modal-footer teal lighten-4">
+                                <a href="{{ url_for('profile', username=session['user']) }}"
+                                    class="modal-close waves-effect waves-green btn-flat teal lighten-3 center">
+                                    Agree</a>
+                                <a href="#!" class="modal-close waves-effect waves-green btn-flat red lighten-3">Disagree</a>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col l4 center">
+                    <a href="#delete-modal1"
+                        class="btn-large waves-effect waves-dark lighten-1 btn-delete btn-styles modal-trigger">
+                        Delete
+                    </a>
+                
+                    <div id="delete-modal1" class="modal teal lighten-4">
+                        <div class="modal-content">
+                            <h4 class="center">Are you sure you want to delete this review?</h4>
+                        </div>
+                        <div class="modal-footer teal lighten-4">
+                            <a href="{{ url_for('delete_review', book_id=book._id) }}"
+                                class="modal-close waves-effect waves-green btn-flat teal lighten-3">
+                                Agree</a>
+                            <a href="#!" class="modal-close waves-effect waves-green btn-flat red lighten-3">Disagree</a>
+                        </div>
+                    </div>
+                
                 </div>
             </div>
+            
+            
+            
+            
+            </form>
+            
+           
 
 
+    
 
         </div>
 
