Set edit rating inputs to required Using Jquery I set the fields on the edit rating section of the edit reviews page to be required

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -6,6 +6,7 @@
   
   nav ul a.nav-link-style{
     color: #F5F3F4;
+    text-shadow: 1px 1px 1px black;
   } 
 
   nav ul a.nav-link-style:active {
