--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,12 +59,12 @@
             <div class="edit-btn-position center">
               <a href="{{ url_for('edit', book_id=book._id) }}"
                 class="btn-large waves-effect waves-dark lighten-1 btn-edit">
-                Edit
+                Edit/Delete
               </a>
             </div>
 
 
-            </div>
+            
           </div>
         </div>
       </div>
