--- a/templates/featured-reviews.html
+++ b/templates/featured-reviews.html
@@ -16,19 +16,21 @@
         </div>
       </nav>
       
-    <div class="col xl4">
+    <div class="col m6 l5 xl4 center">
       <img class="book-review-image" src={{featured.image}}>
     </div>
-    <div class="col m10 l9 xl8">
+    <div class="col m6 l7 xl8">
         <div class="review-content">
             <h3 class="custom-font center">{{featured.title}} by {{featured.author}}</h3>
             <br>
             <p>{{featured.review}}</p>
-            <br>
+            <br> 
+            <div class="center">
             <a href="{{featured.affiliate}}" target="_blank"
                 class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn center">
                 Buy here
             </a>
+          </div>
         </div>
     </div>    
     
