--- a/templates/individual-reviews.html
+++ b/templates/individual-reviews.html
@@ -13,12 +13,12 @@
       </div>
     </div>
   </nav>
-  <div class="col xl4">
+  <div class="col m12 l5 xl4 center">
     <img class="book-review-image" src={{ind_book.image}}>
 
   
     {% if ind_book.rating == "1" %}
-    <div class="star-input2 rate-padding">
+    <div class="star-input2 rate-padding2">
         
     
         <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" disabled/>
@@ -33,7 +33,7 @@
         <label for="st1"></label>
     </div>
     {% elif ind_book.rating == "2" %}
-    <div class="star-input2 rate-padding">
+    <div class="star-input2 rate-padding2">
         <input type="checkbox" name="rating" id="st5"  title="5 stars" value="5" disabled/>
         <label class="" for="st5"></label>
         <input type="checkbox" name="rating" id="st4"  title="4 stars" value="4" disabled/>
@@ -46,7 +46,7 @@
         <label class="" for="st1"></label>
     </div>
     {% elif ind_book.rating == "3" %}
-    <div class="star-input2  rate-padding">
+    <div class="star-input2  rate-padding2">
         <input type="checkbox" name="rating" id="st5" title="5 stars" value="5"  disabled/>
         <label for="st5"></label>
         <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" disabled/>
@@ -59,7 +59,7 @@
         <label for="st1"></label>
     </div>
     {% elif ind_book.rating == "4" %}
-    <div class="star-input2 rate-padding">
+    <div class="star-input2 rate-padding2">
         <input type="checkbox" class="" name="rating" id="st5" title="5 stars" value="5" disabled/>
         <label for="st5"></label>
         <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" checked disabled/>
@@ -72,7 +72,7 @@
         <label for="st1"></label>
     </div>
     {% elif ind_book.rating == "5" %}
-    <div class="star-input2  rate-padding">
+    <div class="star-input2  rate-padding2">
         <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" checked disabled/>
         <label for="st5"></label>
         <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" checked disabled/>
@@ -86,7 +86,7 @@
     </div>
     
     {% else %}
-    <div class="star-input2 rate-padding">
+    <div class="star-input2 rate-padding2">
         <input type="checkbox" name="rating" title="1 star" id="st1" value="1" disabled/>
         <label for="st1"></label>
         <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" disabled/>
@@ -99,11 +99,12 @@
         <label for="st5"></label>
     </div>
     {% endif %}
-
-    <p class="center">Revied by {{ind_book.created_by}}</p>
+    <div class="center">
+    <p>Revied by {{ind_book.created_by}}</p>
+  </div>
 
   </div>
-  <div class="col m10 l9 xl8">
+  <div class="col m12 l7 xl8">
     <div class="review-content">
       <h3 class="custom-font center">{{ind_book.title}} by {{ind_book.author}}</h3>
       <br>
