Format code to neaten up

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -51,7 +51,7 @@
   }
 
  .individual-review-background {
-    background-color: #3e4c59;
+    background-color: #393C56;
   }
 
   footer.page-footer {
