--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
         </div>
 
 
-        {% block main_heading %}{% endblock %}
+        <h1 class="custom-font header center">{% block main_heading %}{% endblock %}</h1>
 
 
         {% block content %}
