--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -2,13 +2,10 @@
 {% block title %} Reviews | Horror House {% endblock %}
 
 
-{% block main_heading %}
-<h1 class="custom-font header center">Featured Titles</h1>
-{% endblock %}
+{% block main_heading %} Featured Titles {% endblock %}
 
 
 {% block content %}
-
 
 <div class="splide">
   <div class="splide__track">
@@ -38,8 +35,6 @@
 
       </li>
       {% endfor %}
-
-
 
     </ul>
   </div>
