--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -2,9 +2,7 @@
 
 {% block title %} Edit Review | Horror House {% endblock %}
 
-{% block main_heading %}
-<h1 class="custom-font header center">Edit your review</h1>
-{% endblock %}
+{% block main_heading %} Edit your review {% endblock %}
 
 {% block content %}
 
