--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,7 @@
 {% block title %} Horror House {% endblock %}
 
 
-
-{% block main_heading %}
-<h1 class="custom-font header center">You're now entering the Horror House</h1>
-{% endblock %}
+{% block main_heading %} You're now entering the Horror House {% endblock %}
 
 {% block content %}
 <div class="row">
