--- a/templates/featured-reviews.html
+++ b/templates/featured-reviews.html
@@ -5,34 +5,33 @@
 
 
 <div class="row individual-review-background">
-    <nav>
-      
-        <div class="nav-wrapper" id="breadcrumb-bar">
-          <div class="col l12">
-            <a href="{{ url_for('reviews') }}" class="breadcrumb">All Reviews</a>
-            <a href="{{ url_for('featured', featured_books_id=featured._id) }}" 
-            class="breadcrumb">{{featured.title}}</a>
-          </div>
-        </div>
-      </nav>
-      
-    <div class="col m6 l5 xl4 center">
-      <img class="book-review-image" src={{featured.image}}>
+  <nav>
+
+    <div class="nav-wrapper" id="breadcrumb-bar">
+      <div class="col l12">
+        <a href="{{ url_for('reviews') }}" class="breadcrumb">All Reviews</a>
+        <a href="{{ url_for('featured', featured_books_id=featured._id) }}" class="breadcrumb">{{featured.title}}</a>
+      </div>
     </div>
-    <div class="col m6 l7 xl8">
-        <div class="review-content">
-            <h3 class="custom-font center">{{featured.title}} by {{featured.author}}</h3>
-            <br>
-            <p>{{featured.review}}</p>
-            <br> 
-            <div class="center">
-            <a href="{{featured.affiliate}}" target="_blank"
-                class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn center">
-                Buy here
-            </a>
-          </div>
-        </div>
-    </div>    
-    
+  </nav>
+
+  <div class="col m6 l5 xl4 center">
+    <img class="book-review-image" src={{featured.image}}>
+  </div>
+  <div class="col m6 l7 xl8">
+    <div class="review-content">
+      <h3 class="custom-font center">{{featured.title}} by {{featured.author}}</h3>
+      <br>
+      <p>{{featured.review}}</p>
+      <br>
+      <div class="center">
+        <a href="{{featured.affiliate}}" target="_blank"
+          class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn center">
+          Buy here
+        </a>
+      </div>
+    </div>
+  </div>
+
 </div>
 {% endblock %}
