--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,7 @@
 
 {% block title %} Login | Horror House {% endblock %}
 
-{% block main_heading %}
-<h1 class= "custom-font header center">Login to your account</h1>
-{% endblock %}
+{% block main_heading %} Login to your account {% endblock %}
 
 {% block content %}
 <div class="row">
