--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -2,9 +2,7 @@
 
 {% block title %} Sign Up | Horror House {% endblock %}
 
-{% block main_heading %}
-<h1 class="custom-font  header center">Create your own account</h1>
-{% endblock %}
+{% block main_heading %} Create your own account {% endblock %}
 
 {% block content %}
 <div class="row">
@@ -31,20 +29,19 @@
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">account_box</i>
-              <input id="username" type="text" name="username" class="validate tooltipped"
-               minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$"
-               data-position="bottom" data-tooltip="Please create a username of letters &amp;
-                numbers that's 5-15 characters long" required> 
+              <input id="username" type="text" name="username" class="validate tooltipped" minlength="5" maxlength="15"
+                pattern="^[a-zA-Z0-9]{5,15}$" data-position="bottom" data-tooltip="Please create a username of letters &amp;
+                numbers that's 5-15 characters long" required>
               <label for="username">Username</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix login-icon-light">enhanced_encryption</i>
-              <input id="password" type="password" name="password" class="validate tooltipped" 
-              minlength="5" maxlength="15" pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" 
-              data-position="bottom" data-tooltip="Password must contain one uppercase &amp; 
-              lowercase letter &amp; a number &amp; a special character: @#$&^"required>
+              <input id="password" type="password" name="password" class="validate tooltipped" minlength="5"
+                maxlength="15" pattern="^(?=.{5,15})(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$&^]).*$" data-position="bottom"
+                data-tooltip="Password must contain one uppercase &amp; 
+              lowercase letter &amp; a number &amp; a special character: @#$&^" required>
               <label for="password">Password</label>
             </div>
           </div>
